# k-wings

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.claude/: settings.local.json
.docker/helpers/: gather.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
application/: Cargo.toml  build.rs
application/src/: config.rs  deserialize.rs  lib.rs  main.rs  models.rs  response.rs  stats.rs  utils.rs
application/src/commands/: configure.rs  diagnostics.rs  mod.rs  service_install.rs  version.rs
application/src/extensions/: mod.rs
application/src/io/: abort.rs  counting_reader.rs  counting_writer.rs  fixed_reader.rs  hash_reader.rs  limited_reader.rs  limited_writer.rs  mod.rs  range_reader.rs
application/src/io/compression/: mod.rs  reader.rs  writer.rs
application/src/remote/: backups.rs  client.rs  jwt.rs  mod.rs  servers.rs
application/src/routes/: mod.rs
application/src/routes/api/: deauthorize_user.rs  mod.rs  stats.rs  update.rs
application/src/routes/api/backups/: _backup_.rs
application/src/routes/api/servers/: mod.rs  power.rs
application/src/routes/api/servers/_server_/: commands.rs  logs.rs  mod.rs  power.rs  reinstall.rs  sync.rs  transfer.rs  version.rs
application/src/routes/api/servers/_server_/backup/: mod.rs
application/src/routes/api/servers/_server_/backup/_backup_/: mod.rs  restore.rs
application/src/routes/api/servers/_server_/bedrock/: education.rs  experiments.rs  install_package.rs  mod.rs  pack_delete.rs  pack_order.rs  packages_manifest.rs  packs_enabled.rs  packs_ordered.rs  world_version.rs
application/src/routes/api/servers/_server_/files/: chmod.rs  compress.rs  contents.rs  copy.rs  copy_many.rs  copy_remote.rs  create_directory.rs  decompress.rs  delete.rs  fingerprints.rs  largest_directories.rs  list.rs  list_directory.rs  mod.rs  rename.rs  search.rs  write.rs
application/src/routes/api/servers/_server_/files/operations/: _operation_.rs
application/src/routes/api/servers/_server_/files/pull/: _pull_.rs  mod.rs  query.rs
application/src/routes/api/servers/_server_/install/: abort.rs
application/src/routes/api/servers/_server_/logs/: mod.rs
application/src/routes/api/servers/_server_/schedule/_schedule_/: abort.rs  mod.rs  trigger.rs
application/src/routes/api/servers/_server_/ws/: deny.rs  mod.rs  permissions.rs
application/src/routes/api/system/: mod.rs  overview.rs  upgrade.rs
application/src/routes/api/system/logs/: _file_.rs  mod.rs
application/src/routes/api/system/stats/: ws.rs
application/src/routes/api/transfers/: _server_.rs  files.rs  mod.rs
application/src/routes/download/: backup.rs  directory.rs  file.rs  files.rs
application/src/routes/upload/: file.rs
application/src/server/: activity.rs  container.rs  installation.rs  manager.rs  mod.rs  permissions.rs  resources.rs  script.rs  state.rs  transfer.rs
application/src/server/backup/: btrfs.rs  ddup_bak.rs  manager.rs  mod.rs  restic.rs  s3.rs  wings.rs  zfs.rs
application/src/server/backup/adapters/: btrfs.rs  ddup_bak.rs  mod.rs  restic.rs  s3.rs  wings.rs  zfs.rs
application/src/server/bedrock/services/: file_upload.rs  mod.rs  nbt.rs  package_installation.rs  utilities.rs  world_data.rs  world_packages.rs
application/src/server/bedrock/types/: bedrock_version.rs  experiment.rs  manifest_info.rs  mod.rs  package.rs  server_packages.rs
application/src/server/configuration/: mod.rs  process.rs  seccomp.rs
application/src/server/configuration/process/: json.rs  mod.rs  plain.rs  properties.rs  yaml.rs
application/src/server/diff/: manager.rs  storage.rs
application/src/server/executor/: docker.rs
application/src/server/filesystem/: archive.rs  curseforge.rs  disk_checker.rs  inotify.rs  mod.rs  operations.rs  pull.rs  usage.rs  walker.rs  writer.rs
application/src/server/filesystem/archive/: mod.rs  multi_reader.rs
application/src/server/filesystem/archive/create/: itaf.rs  seven_zip.rs  tar.rs  zip.rs
application/src/server/filesystem/backup/: btrfs.rs  ddup_bak.rs  mod.rs  restic.rs  wings.rs  zfs.rs
application/src/server/filesystem/cap/: mod.rs  utils.rs
application/src/server/filesystem/limiter/: btrfs_subvolume.rs  fuse_quota.rs  mod.rs  xfs_quota.rs  zfs_dataset.rs
application/src/server/filesystem/pull/: mod.rs  resolver.rs
application/src/server/filesystem/virtualfs/: cap.rs  mod.rs  mount.rs
application/src/server/filesystem/virtualfs/archive/: ddup_bak.rs  seven_zip.rs  zip.rs
application/src/server/schedule/: actions.rs  manager.rs  mod.rs
application/src/server/transfer/: counting_reader.rs  counting_writer.rs  mod.rs
application/src/server/websocket/: handler.rs  jwt.rs  message_handler.rs  mod.rs
application/src/sftp/: auth.rs  mod.rs
application/src/ssh/: auth.rs  exec.rs  mod.rs  sftp.rs  shell.rs
application/src/ssh/sftp/: extended.rs  mod.rs
extension/: Cargo.toml
extension/src/: lib.rs
extension/src/routes/: random.rs
src/: config.rs  main.rs
src/commands/: diagnostics.rs  mod.rs
src/remote/: client.rs  mod.rs  servers.rs
src/routes/api/: mod.rs
src/routes/api/servers/: mod.rs
src/routes/api/servers/_server_/: commands.rs  logs.rs  mod.rs  power.rs  reinstall.rs  transfer.rs  version.rs
src/routes/api/servers/_server_/files/: chmod.rs  compress.rs  contents.rs  copy.rs  decompress.rs  delete.rs  fingerprints.rs  list_directory.rs  rename.rs  search.rs  write.rs
src/routes/api/servers/_server_/files/pull/: _pull_.rs  (+1 more)
src/routes/api/transfers/: _server_.rs  mod.rs
src/routes/download/: directory.rs  file.rs
src/routes/upload/: file.rs
src/server/: activity.rs  container.rs  installation.rs  manager.rs  mod.rs  permissions.rs  state.rs  transfer.rs
src/server/backup/: btrfs.rs  ddup_bak.rs  mod.rs  s3.rs  wings.rs
src/server/configuration/: mod.rs  process.rs
src/server/filesystem/: archive.rs  mod.rs  pull.rs  usage.rs  writer.rs
src/server/filesystem/limiter/: btrfs_subvolume.rs
src/server/websocket/: handler.rs  jwt.rs  message_handler.rs  mod.rs
src/sftp/: auth.rs  mod.rs
(+2 files in other folders)
