[workspace]
resolver = "3"
members = ["application", "extension"]
default-members = ["application"]

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.1", features = ["ws", "multipart"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-extra = { version = "0.10.1", features = ["query"] }
bollard = "0.18.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order", "chrono", "indexmap", "uuid"] }
utoipa-axum = "0.2.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
tower-http = { version = "0.6.2", features = ["catch-panic"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures-util = "0.3.31"
tokio-util = { version = "0.7.15", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tar = "0.4.44"
tokio-tar = "0.3.1"
zip = { version = "3.0.0", default-features = false, features = ["bzip2", "deflate", "sha1", "time", "zstd", "lzma-rs"] }
sevenz-rust2 = { version = "0.14.1", features = ["deflate", "brotli", "zstd", "bzip2", "lz4"] }
flate2 = "1.1.1"
zstd = "0.13.3"
async-compression = { version = "0.4.23", features = ["tokio", "bzip2", "gzip", "lz4", "xz", "zstd"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = false

[profile.release]
opt-level = "s"
lto = true
