[workspace]
resolver = "3"
members = ["application", "extension", "unrar-rs"]
default-members = ["application"]

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.1", features = ["http2", "ws", "multipart"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-extra = { version = "0.10.1", features = ["query"] }
bollard = "0.18.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_order", "chrono", "indexmap", "uuid"] }
utoipa-axum = "0.2.0"
reqwest = { version = "0.12.12", default-features = false, features = ["hickory-dns", "rustls-tls", "json", "multipart", "stream"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures-util = "0.3.31"
tokio-util = { version = "0.7.15", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
rand = "0.9.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = "symbols"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
